log
Fri Mar 20 05:52:07 PM UTC 2026: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:80:22: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Wimplicit-function-declaration]
   80 |    Stack* auxiliar = createStack();
      |                      ^~~~~~~~~~~
      |                      create_stack
exercises.c:80:22: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
deef825
Fri Mar 20 05:55:07 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:80:22: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Wimplicit-function-declaration]
   80 |    Stack* auxiliar = createStack();
      |                      ^~~~~~~~~~~
      |                      create_stack
exercises.c:80:22: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
1995eb6
Fri Mar 20 05:55:27 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
0da8719
Fri Mar 20 06:02:19 PM UTC 2026: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:59:19: error: expected expression before ‘int’
   59 |       contador += int;
      |                   ^~~
12238e5
Fri Mar 20 06:02:40 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:59:16: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   59 |       contador += elemento;
      |                ^~
c171d95
Fri Mar 20 06:02:55 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
ec35655
Fri Mar 20 06:10:16 PM UTC 2026: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
cae0c4a
Fri Mar 20 06:34:38 PM UTC 2026: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 40/70
65e842d
Sat Mar 21 09:56:48 PM UTC 2026: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:52:20: error: passing argument 2 of ‘pushFront’ makes pointer from integer without a cast [-Wint-conversion]
   52 |       pushFront(L, *p);
      |                    ^~
      |                    |
      |                    int
In file included from exercises.c:6:
arraylist.h:17:31: note: expected ‘void *’ but argument is of type ‘int’
   17 | void pushFront(List *L, void *dato);
      |                         ~~~~~~^~~~
exercises.c:47:9: error: unused variable ‘elemento’ [-Werror=unused-variable]
   47 |    int* elemento = first(L);
      |         ^~~~~~~~
exercises.c:45:8: error: unused variable ‘contador’ [-Werror=unused-variable]
   45 |    int contador = 1;
      |        ^~~~~~~~
cc1: all warnings being treated as errors
9ba73d3
Sat Mar 21 09:57:57 PM UTC 2026: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:9: error: unused variable ‘elemento’ [-Werror=unused-variable]
   46 |    int* elemento = first(L);
      |         ^~~~~~~~
cc1: all warnings being treated as errors
89ef166
Sat Mar 21 09:58:37 PM UTC 2026: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|2
total_score: 40/70
c63e126
Sat Mar 21 10:00:07 PM UTC 2026: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
560093c
Sat Mar 21 10:01:00 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
7fdc09f
